Dugmici u navigaciji centrirani, naslov i slika se nalaze jedno ispod drugog i centrirani su.

--- a/Elevate.html
+++ b/Elevate.html
@@ -23,7 +23,7 @@
         <p>A powerful tool to help you achieve more every day.</p>
         <a href="#" class="primary-btn">Try It for Free</a>
       </div>
-      <img src="https://i.ibb.co/ZpMxs7np/graph.jpg" alt="Product Illustration">
+      <img class ="img" src="https://i.ibb.co/ZpMxs7np/graph.jpg" alt="Product Illustration">
     </div>
 
     <!-- Features Section -->
