Napravljen raspored scss datoteke u parcijalne.

--- a/Elevate.html
+++ b/Elevate.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Elevate - Boost your productivity to infinity</title>
-    <link rel="stylesheet" href="Elevate.css"></link>
+    <link rel="stylesheet" href="css/Elevate.css"></link>
   </head>
   <body>
     <!-- Navbar -->
